--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/sequelize": "^4.28.13",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.20.0",
